[tool.poetry]
name = "avoid-the-rain-robot"
version = "0.1.0"
description = ""
authors = ["hi-jin <sudwlsdks@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybullet = "^3.2.6"
numpy = "<2"
stable-baselines3 = "^2.3.2"
wandb = "^0.17.1"
tensorboard = "^2.17.0"
moviepy = "^1.0.3"
imageio = "^2.34.1"
gymnasium = "^0.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
